# ML-DL-paper-with-code

./: .gitignore  README.md
.devcontainer/: devcontainer.json
NLP/Transformer/: README.md
NLP/Word2Vec/: README.md
NLP/seq2seq/: README.md  config.py  model.py  pyproject.toml  requirements.txt  train.py  utils.py
vision_model/Alexnet/: README.md  train-alexnet.ipynb
vision_model/GoogLeNet/: GoogLeNet.ipynb
vision_model/VGGNet/: README.md  vggnet_pipeline.ipynb
vision_model/VGGNet/vgg_agent/: app.py  requirements.txt
vision_model/VGGNet/vgg_agent/src/: __init__.py  custom_model.py  model.py  preprocess.py  utils.py
vision_model/VGGNet/vgg_inference/: app.py  main.py  requirements.txt
vision_model/VGGNet/vgg_inference/vgg_inference/: __init__.py  model.py  preprocess.py  utils.py
