[project]
name = "seq2seq"
version = "0.1.0"
description = ""
authors = [
    {name = "llseungjun",email = "sjl27552755@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch (>=1.9.0)",
    "numpy (>=1.19.2)",
    "tqdm (>=4.62.3)",
    "matplotlib (>=3.4.3)",
    "tensorboard (>=2.7.0)",
    "mlflow (>=2.8.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
